# trendgetter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
dags/: community_crawling_dag.py  instagram_crawling_dag.py  tfidf_dag.py  tokenization_dag.py  trendgette_dag.py  youtube_crawling_dag.py
deploy/: airflow-scheduler.yaml  airflow-webserver.yaml  airflow-worker.yaml  apply.sh  backfill.sh  commit_pg_schema.sh  configmap.yaml  import-image-to-containerd.sh  import-superset-image.sh  metallb-config.yaml  mongodb.yaml  namespace.yaml  postgres.yaml  pv.dev.yaml  pv.yaml  pvc.yaml  redis.yaml  reset-postgres.sh  run-minikube.sh  secret.yaml  setup-metallb.sh  setup-mongodb-connection.sh  setup-superset-db.sh  setup-superset-pg-connection.sh  shell.sh  superset.yaml
src/: api_client.py  crawler.py  model.py  mongodb.py  postgresql.py  quality_assurance.py  setup_mongodb_connection.py  statistics.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 001_initial_tfidf_scores.py
superset_config/: Dockerfile  database_connections.py
