[project]
name = "trendgetter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.11.0",
    "apache-airflow-providers-celery>=3.3.0",
    "apache-airflow-providers-common-compat>=1.10.1",
    "apache-airflow-providers-mongo>=5.3.0",
    "apache-airflow-providers-postgres>=5.10.0",
    "alembic>=1.13.0",
    "sqlalchemy>=1.4.0",
    "bs4>=0.0.2",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.15.5",
    "kiwipiepy>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["dags*", "logs*", "plugins*", "deploy*", "documents*"]
